--- a/Python Basics/3.Data_Types.ipynb
+++ b/Python Basics/3.Data_Types.ipynb
@@ -10,7 +10,10 @@
    "id": "9424a6e5",
    "metadata": {},
    "source": [
-    "### Python Data Types\n",
+    "## **Python Data Types**\n",
+    "\n",
+    "a data type is a classification that specifies the type of value a variable holds. Python has various built-in data types that are used to define the operations possible on those variables and the storage method for each of them\n",
+    "\n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -19,8 +22,8 @@
    "id": "633e2a99",
    "metadata": {},
    "source": [
-    "### Primitive Data Type\n",
-    "#### 1. Integer\n",
+    "## **Primitive Data Type**\n",
+    "### **1. Integer**\n",
     "Most common data type used to store numbers without decimal or fractional component."
    ]
   },
@@ -60,7 +63,7 @@
    "id": "34bf001b",
    "metadata": {},
    "source": [
-    "#### 2. Float\n",
+    "### **2. Float**\n",
     "Numeric data type used to store number of fractional component or decimal"
    ]
   },
@@ -121,7 +124,7 @@
    "id": "7133d6fa",
    "metadata": {},
    "source": [
-    "#### 3. String\n",
+    "### **3. String**\n",
     "\n",
     "- Immutable: Once a string is created, its value cannot be changed. Any operation that modifies a string will return a new string.\n",
     "- Indexed: Strings are sequences, so you can access individual characters using indexing. Python uses zero-based indexing.\n",
@@ -767,8 +770,8 @@
    "id": "febe7a85",
    "metadata": {},
    "source": [
-    "### Non-primitive Data Type\n",
-    "#### Array\n",
+    "## **Non-primitive Data Type**\n",
+    "#### **Array**\n",
     "- Definition: An ordered collection of elements, each identified by an index or a key.\n",
     "#### **Characteristics:**\n",
     "- Elements are stored in contiguous memory locations.\n",
@@ -813,7 +816,7 @@
    "id": "f623dc3c",
    "metadata": {},
    "source": [
-    "#### 1. Lists\n",
+    "### **1. Lists**\n",
     "Python lists are similar to array in 'C'. However a list can contain data of different types.\n",
     "- Elements are enclosed within square brackets.\n",
     "- Elements are separated by comma(,).\n",
@@ -1896,7 +1899,7 @@
    "id": "53b40541",
    "metadata": {},
    "source": [
-    "#### 2. Tuples\n",
+    "### **2. Tuples**\n",
     "A data structure which is a collection of data which is ordered and unchngeable. Tuples are simply immutable lists.\n",
     "- Elements are enclosed within paranthesis.\n",
     "- Elements are separated by comma(,).\n",
@@ -2232,7 +2235,7 @@
    "id": "e594b265",
    "metadata": {},
    "source": [
-    "#### 3. Dictionary\n",
+    "### **3. Dictionary**\n",
     "Dictionary is used to store the data in a 'KEY:VALUE' pair format. Like a map or hash table in other languages.\n",
     "- Dictionary is mutable but unordered\n",
     "- All the elements are enclosed within flower brackets{}.\n",
@@ -2241,93 +2244,208 @@
     "- KEY must be a single element and unique\n",
     "- VALUE can be of any type like int, str, float, list, tuple.\n",
     "\n",
-    "##### Syntax Example:\n",
+    "#### Syntax Example:\n",
     "Dictionary = {Key1:Value1, Key2:Value2, Key3:Value3}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e33b0374",
+   "execution_count": 1,
+   "id": "cf28df5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a dictionary\n",
+    "student_info = {'name': 'John', 'age': 20, 'grade': 'A'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "36c3bdc0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'John', 'age': 20, 'grade': 'A'}\n",
-      "20\n",
-      "dict_items([('name', 'John'), ('age', 20), ('grade', 'A')])\n",
-      "dict_keys(['name', 'age', 'grade'])\n",
-      "dict_values(['John', 20, 'A'])\n",
+      "{'name': 'John', 'age': 20, 'grade': 'A'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Copying the dict\n",
+    "new_dict = student_info.copy()\n",
+    "print(new_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "59d95cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accessing values using keys.\n",
+    "name = student_info['name']\n",
+    "age = student_info['age']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "08f4bde1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get method\n",
+    "age = new_dict.get('age')\n",
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e42726dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('name', 'John'), ('age', 20), ('grade', 'A')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# items method\n",
+    "items = new_dict.items()\n",
+    "print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cb20fa36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'age', 'grade'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keys method\n",
+    "keys = new_dict.keys()\n",
+    "print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a05b85b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['John', 20, 'A'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# values method\n",
+    "values = new_dict.values()\n",
+    "print(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "007c55b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{'name': 'John', 'age': 20, 'grade': 'B'}\n",
       "{'name': 'John', 'age': 24, 'grade': 'A'}\n",
-      "india\n",
-      "{'name': 'John', 'age': 24, 'grade': 'A', 'country': 'india'}\n",
-      "{'name': 'John', 'age': 20, 'grade': 'B', 'gender': 'Male'}\n",
-      "{'name': 'John', 'grade': 'B', 'gender': 'Male'}\n",
+      "India\n",
+      "{'name': 'John', 'age': 24, 'grade': 'A', 'country': 'India'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modifying the value associated with a key.\n",
+    "student_info['grade'] = 'B'\n",
+    "print(student_info)\n",
+    "\n",
+    "# Using update method to modify a value\n",
+    "new_dict.update({'age': 24})\n",
+    "print(new_dict)\n",
+    "\n",
+    "# Using setdefault method\n",
+    "country = new_dict.setdefault('country', 'India')\n",
+    "print(country)\n",
+    "print(new_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5a129f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'John', 'grade': 'B'}\n",
       "A\n"
      ]
     }
    ],
    "source": [
-    "# Creating a dictionary\n",
-    "student_info = {'name': 'John', 'age': 20, 'grade': 'A'}\n",
-    "\n",
-    "# Copying the dict\n",
-    "new_dict = student_info.copy()\n",
-    "print(new_dict)\n",
-    "\n",
-    "# Accessing elements\n",
-    "# Accessing values using keys.\n",
-    "name = student_info['name']  \n",
-    "age = student_info['age'] \n",
-    "\n",
-    "# get method\n",
-    "age = new_dict.get('age')\n",
-    "print(age)\n",
-    "\n",
-    "#items method\n",
-    "items = new_dict.items()\n",
-    "print(items)\n",
-    "\n",
-    "# keys method\n",
-    "keys = new_dict.keys()\n",
-    "print(keys)\n",
-    "\n",
-    "#values method\n",
-    "values = new_dict.values()\n",
-    "print(values)\n",
-    "\n",
-    "# Modifying elements\n",
-    "# Modifying the value associated with a key.\n",
-    "student_info['grade'] = 'B'\n",
-    "print(student_info)\n",
-    "\n",
-    "new_dict.update({'age':24})\n",
-    "print(new_dict)\n",
-    "\n",
-    "country = new_dict.setdefault('country','india')\n",
-    "print(country)\n",
-    "print(new_dict)\n",
-    "\n",
-    "# Adding elements\n",
-    "# Adding new key-value pairs.\n",
-    "student_info['gender'] = 'Male'\n",
-    "print(student_info)  \n",
-    "\n",
-    "# Removing elements\n",
     "# Removing key-value pairs.\n",
     "del student_info['age']\n",
-    "print(student_info)  \n",
+    "print(student_info)\n",
     "\n",
-    "\n",
+    "# Using pop method to remove a key-value pair\n",
     "popi = new_dict.pop('grade')\n",
-    "print(popi)\n",
-    "\n",
-    "# Dictionary length\n",
+    "print(popi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "88583ae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
     "# Determining the number of key-value pairs in a dictionary.\n",
-    "length = len(student_info) "
+    "length = len(student_info)\n",
+    "print(length)"
    ]
   },
   {
@@ -2487,7 +2605,7 @@
    "id": "e088f20b",
    "metadata": {},
    "source": [
-    "#### 4. Sets\n",
+    "### **4. Sets**\n",
     "\n",
     "Collection of unordered items/elements.\n",
     "- Elements/items are enclosed within flower brackets{}\n",
@@ -2498,17 +2616,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "22eff54c",
+   "execution_count": 11,
+   "id": "2bfc65b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a set\n",
+    "unique_numbers = {1, 2, 3, 4, 5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9a813e20",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5, 6}\n",
-      "{1, 2, 4, 5, 6}\n",
-      "5\n",
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding elements to a set\n",
+    "unique_numbers.add(6)\n",
+    "print(unique_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c17f74ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Removing elements from a set\n",
+    "unique_numbers.remove(3)\n",
+    "print(unique_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c0dcdd6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determining the number of elements in a set\n",
+    "length = len(unique_numbers)\n",
+    "print(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "81dc5102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set operations\n",
+    "set1 = {1, 2, 3}\n",
+    "set2 = {3, 4, 5}\n",
+    "\n",
+    "# Set operations like union, intersection, and difference\n",
+    "union_set = set1.union(set2)\n",
+    "intersection_set = set1.intersection(set2)\n",
+    "difference_set = set1.difference(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6e91488d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Original Set: {1, 2, 4, 5, 6}\n",
       "Union Set: {1, 2, 3, 4, 5}\n",
       "Intersection Set: {3}\n",
@@ -2517,33 +2720,6 @@
     }
    ],
    "source": [
-    "# Creating a set\n",
-    "unique_numbers = {1, 2, 3, 4, 5}\n",
-    "\n",
-    "# Adding elements\n",
-    "# Adding elements to a set.\n",
-    "unique_numbers.add(6)\n",
-    "print(unique_numbers) \n",
-    "\n",
-    "# Removing elements\n",
-    "# Removing elements from a set.\n",
-    "unique_numbers.remove(3)\n",
-    "print(unique_numbers)  \n",
-    "\n",
-    "# Set length\n",
-    "# Determining the number of elements in a set.\n",
-    "length = len(unique_numbers)  \n",
-    "print(length)\n",
-    "\n",
-    "# Set operations\n",
-    "set1 = {1, 2, 3}\n",
-    "set2 = {3, 4, 5}\n",
-    "\n",
-    "# Set operations like union, intersection, and difference.\n",
-    "union_set = set1.union(set2)  \n",
-    "intersection_set = set1.intersection(set2)  \n",
-    "difference_set = set1.difference(set2)  \n",
-    "\n",
     "# Displaying the final results\n",
     "print(\"Original Set:\", unique_numbers)\n",
     "print(\"Union Set:\", union_set)\n",
@@ -2660,7 +2836,7 @@
    "id": "44a9e7b8",
    "metadata": {},
    "source": [
-    "### Non-Primitive Data type conversion"
+    "## **Non-Primitive Data type conversion**"
    ]
   },
   {
@@ -3154,7 +3330,7 @@
    "id": "2a37acab",
    "metadata": {},
    "source": [
-    "### **List Comprehension**\n",
+    "## **List Comprehension**\n",
     "<code>new_list = [expression for item in iterable if condition]</code>"
    ]
   },
