--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ab662608",
+   "metadata": {},
+   "source": [
+    "## **Python Conditional Statements:**\n",
+    "Conditional statements in Python are used to execute different blocks of code based on whether a specified condition evaluates to True or False. They are fundamental to programming as they enable the implementation of decision-making logic within programs. Python provides several conditional statements to facilitate this, namely if, else, elif, and nested conditionals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5de35179",
    "metadata": {},
    "source": [
-    "### Python Conditional Statements:\n",
-    "Conditional statements in Python are used to execute different blocks of code based on whether a specified condition evaluates to True or False. They are fundamental to programming as they enable the implementation of decision-making logic within programs. Python provides several conditional statements to facilitate this, namely if, else, elif, and nested conditionals.\n",
-    "\n",
-    "#### 1. **if Statement:**\n",
+    "### **1.if Statement:**\n",
     "The if statement is the most basic conditional statement in Python. It allows you to execute a block of code only if a specified condition is true.\n",
     "\n",
     "**Syntax**\n",
@@ -67,7 +73,7 @@
    "id": "6a9c9e50",
    "metadata": {},
    "source": [
-    "#### 2. **else Statement:**\n",
+    "### **2.else Statement:**\n",
     "The else statement provides an alternative action for when the condition in the if statement is not met.\n",
     "- If the condition is true: Python runs the code inside the if block.\n",
     "- If the condition is false: Python skips the code inside the if block and moves to the else block, running the code inside it.\n",
@@ -241,7 +247,7 @@
    "id": "9d0d082b",
    "metadata": {},
    "source": [
-    "### 3.**elif Statement:**\n",
+    "### **3.elif Statement:**\n",
     "The elif statement, short for \"else if\", allows you to check multiple conditions sequentially. It is used when you have more than two possible outcomes.\n",
     "\n",
     "<pre><code>if condition1:\n",
@@ -441,7 +447,7 @@
    "id": "8f5b5a7e",
    "metadata": {},
    "source": [
-    "### 4. **Nested if Statements:**\n",
+    "### **4.Nested if Statements:**\n",
     "Python allows you to nest conditional statements within one another, creating more complex decision-making logic.\n",
     "\n",
     "Nested if statements in Python are like opening a series of boxes inside another box. Each box (or if statement) contains its own instructions, and you can have one box inside another.\n",
@@ -660,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
