--- a/Python Basics/2.Python_K_I_V_O.ipynb
+++ b/Python Basics/2.Python_K_I_V_O.ipynb
@@ -2045,7 +2045,9 @@
    "id": "ff2ae18a",
    "metadata": {},
    "source": [
-    "Identity operators check whether two values are identical. Python has 2 identity operators as well:\n",
+    "### 7. Identity operators \n",
+    "\n",
+    "check whether two values are identical. Python has 2 identity operators as well:\n",
     "- is\n",
     "- is not"
    ]
