--- a/EDA/Car/Car/Simple CAR EDA.ipynb
+++ b/EDA/Car/Car/Simple CAR EDA.ipynb
@@ -2428,7 +2428,7 @@
     "ax[2].set_ylabel('Mileage (Numeric)')\n",
     "ax[2].set_xlabel('Brand', fontweight='bold')\n",
     "\n",
-    "plt.tight_layout()\n",
+    "plt.tight_layout() # Adjust spacing between subplots\n",
     "plt.show()"
    ]
   },
